feat: add coreference resolution
