# openapi.json
@@ -1303,11 +1303,15 @@
           "content": {
             "type": "string",
             "minLength": 1
+          },
+          "resolveCoreferences": {
+            "type": "boolean"
           }
         },
         "required": [
           "name",
-          "content"
+          "content",
+          "resolveCoreferences"
         ]
       },
       "ChatDto": {
